tests/error_corpus/validation_errors/not_implemented/E258_consecutive_commas.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|||||Target_Child|||
@Comment:	Expected error: E258 (Consecutive commas)
@Comment:	Trigger: Two comma separators in a row
*CHI:	hello ,, world .
@End
