tests/error_corpus/parse_errors/E344_invalid_scoped_nesting.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|||||Target_Child|||
@Comment:	Expected error: E344 (Invalid scoped annotation nesting)
@Comment:	Trigger: Overlapping scoped annotations of same type
*CHI:	hello <world <foo> bar> .
@End
